--- a/CoffeeBarV3/CoffeeBarV0/CoffeeBarV3.csproj
+++ b/CoffeeBarV3/CoffeeBarV0/CoffeeBarV3.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Item.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
